@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:                Text-CSV_XS
-version:             0.31
+version:             0.32
 abstract:            Comma-Separated Values manipulation routines
 license:             perl
 generated_by:        ExtUtils::MakeMaker version 6.36
